# NovoLang

./: CMakeLists.txt  LICENSE  NovoLangEditor.spec  README.md  editor.py  index.html  main.py  requirements.txt  setup.py
c++/include/: ast_exec.h  io.h  py_bind.h  scope.h
c++/src/: ast_exec.cpp  io.cpp  py_bind.cpp  scope.cpp
python/: ast_builder.py  auto_api.py  lexer.py  parser.py  py_executor.py
test/: auto_test.nl  base_test.nl
